Add initial validation
